src/objects/CPS_Template__mdt.object
<CustomObject>
    <description>When a standard care plan is created and the care plan objective template used, these steps are also copied to the new care plan</description>
    <fields>
        <fullName>Care_Plan_Obj_Template__c</fullName>
        <inlineHelpText>The name of the Care Plan Objective Template</inlineHelpText>
        <label>Care Plan Objective Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Order__c</fullName>
        <inlineHelpText>This is the order the steps will be created in, to all the &quot;What step needs to happen first&quot; step to exist when this step is created</inlineHelpText>
        <label>Creation Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is effectively the title of the care plan step</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_this__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Tick to include this step in the care plan</inlineHelpText>
        <label>Include this step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, then this care plan step will not appear in the list of standard steps</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <inlineHelpText>One of:
Open
Blocked
Completed</inlineHelpText>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_step_needs_to_happen_first__c</fullName>
        <inlineHelpText>The name of the care plan step that needs to happen before this one - USE the step&apos;s OBJECT NAME field</inlineHelpText>
        <label>What step needs to happen first</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Care Plan Step Template</label>
    <pluralLabel>Care Plan Step Templates</pluralLabel>
</CustomObject>